# cg-town

./: .gitignore  README.md  WORKPLAN.md
.claude/: ._settings.local.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py  router.py
backend/lib/: supabase.py
backend/ws/: endpoint.py  manager.py
docs/: TODO.md  api_spec.md  convention.md
docs/decisions/: 001-user-metadata-for-position.md  002-responsive-game-scale.md  003-phaser-migration-plan.md
frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/auth/reset-password/confirm/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dogam/: page.tsx
frontend/app/dogam/[id]/: page.tsx
frontend/app/dogam/edit/: page.tsx
frontend/components/: Character.tsx  GameCanvas.tsx  PhaserGame.tsx  RemoteCharacter.tsx
frontend/components/ui/: button.tsx
frontend/contexts/: GameScaleContext.tsx
frontend/game/: EventBus.ts  main.ts
frontend/game/scenes/: Boot.ts  GameScene.ts  Preloader.ts
frontend/game/sprites/: Player.ts  RemotePlayer.ts
frontend/hooks/: useGameScale.ts  useMultiplayer.ts
frontend/lib/: EventBus.ts  api.ts  gameConfig.ts
frontend/lib/supabase/: server.ts
frontend/public/images/tiles/workspace/: check_seamless.py  (+1 more)
frontend/public/maps/: main.json
notebooks/: 01_generative_ai_intro.ipynb  requirements.txt
