[project]
name = "cg-town-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.27.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.6",
]

[tool.uv]
dev-dependencies = []
